--- a/config/config_pose.yaml
+++ b/config/config_pose.yaml
@@ -1,5 +1,7 @@
 topic_camera: "/dope/webcam/image_raw"
 topic_camera_info: "/dope/webcam/camera_info"
+#uncomment topic_depth to enable depth image based post processing
+#topic_depth: "/camera/depth/image_rect"
 topic_publishing: "dope"
 input_is_rectified: True   # Whether the input image is rectified (strongly suggested!)
 downscale_height: 500      # if the input image is larger than this, scale it down to this pixel height
