--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,64 @@ scipy==1.1.0
 opencv_python==3.4.1.15
 Pillow==5.3.0
 torchvision==0.2.1
+
+# for meshrender:
+autolab-core==0.0.12
+autolab-perception==0.0.8
+backports.shutil-get-terminal-size==1.0.0
+certifi==2019.9.11
+cloudpickle==1.2.2
+colorlog==4.0.2
+decorator==4.4.0
+dill==0.3.0
+ffmpeg-python==0.2.0
+future==0.17.1
+h5py==2.10.0
+idna==2.8
+imageio==2.5.0
+ipython==5.5.0
+ipython-genutils==0.2.0
+joblib==0.13.2
+Keras==2.3.0
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.0
+lxml==4.4.1
+matplotlib==2.2.0
+mpmath==1.1.0
+msgpack==0.6.2
+multiprocess==0.70.8
+networkx==2.2
+pathlib2==2.3.5
+pexpect==4.7.0
+pickleshare==0.7.5
+prompt-toolkit==1.0.16
+ptyprocess==0.6.0
+pycollada==0.6
+pyglet==1.4.4
+PyOpenGL==3.1.0
+pyserial==3.4
+PyWavelets==1.0.3
+requests==2.22.0
+Rtree==0.8.3
+ruamel.ordereddict==0.4.14
+ruamel.yaml==0.16.5
+ruamel.yaml.clib==0.2.0
+scandir==1.10.0
+scikit-image==0.14.5
+scikit-learn==0.20.0
+scikit-video==1.1.11
+setproctitle==1.1.10
+Shapely==1.6.4.post2
+simplegeneric==0.8.1
+svg.path==3.0
+sympy==1.4
+traitlets==4.3.2
+trimesh==3.2.19
+urllib3==1.25.6
+wcwidth==0.1.7
+xxhash==1.4.1
+
+## this cannot be included in requirements.txt, otherwise it fails when it tries
+## to install scikit-learn 0.21.3, but scikit-learn 0.20 is the latest version
+## that is compatible with Python 2.7.
+#meshrender==0.0.10
