--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ backports.shutil-get-terminal-size==1.0.0
 certifi==2019.9.11
 cloudpickle==1.2.2
 colorlog==4.0.2
+cycler==0.10.0
 decorator==4.4.0
 dill==0.3.0
 ffmpeg-python==0.2.0
