--- a/config/config_pose.yaml
+++ b/config/config_pose.yaml
@@ -1,7 +1,5 @@
 topic_camera: "/dope/webcam/image_raw"
 topic_camera_info: "/dope/webcam/camera_info"
-#uncomment topic_depth to enable depth image based post processing
-#topic_depth: "/camera/depth/image_rect"
 topic_publishing: "dope"
 input_is_rectified: True   # Whether the input image is rectified (strongly suggested!)
 downscale_height: 500      # if the input image is larger than this, scale it down to this pixel height
@@ -85,3 +83,14 @@ thresh_angle: 0.5
 thresh_map: 0.01
 sigma: 3
 thresh_points: 0.1
+
+# Depth image based post processing
+# uncomment topic_depth to enable post processing
+#topic_depth: "/camera/depth/image_rect"
+# maximum depth distance (in meters) between recognized pose and true pose in depth image
+depth_cutoff: 0.30
+# Minimum ratio between valid points (= not NaN, within depth_cutoff) in actual depth image and expected points in
+# in rendered depth image. Detections below min_valid_points_ratio will be discarded. In practice, false positives
+# almost always have 0 valid points, whereas true positives range between 0.02 and 0.70 (depending on object and
+# camera).
+min_valid_points_ratio: 0.01
